--- a/package.json
+++ b/package.json
@@ -95,13 +95,16 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@phosphor-icons/react": "^2.0.10",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.11.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
